[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sabre-java-agent"
version = "0.1.0"
description = "Claude Agent SDK agent that generates Java from HLASM or user stories for Sabre workloads."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]

[project.scripts]
sabre-java-agent = "sabre_java_agent.cli:main"

[tool.setuptools.packages.find]
include = ["sabre_java_agent*"]
